# citationhunter

./: .gitignore  AGENTS.md  README.md  gemini-extension.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
hooks/scripts/: check-config.sh
skills/citationhunter/: SKILL.md
tests/: test_plugin_contract.py  test_skill_structure.py
