[project]
name = "citationhunter-skill"
version = "1.0.0"
description = "Research paper citation auditor skill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=7,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
  "-q",
  "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["tests"]
